re PR bootstrap/69677 (bootstrap failed with --with-arch=corei7 --with-cpu=corei7)

PR bootstrap/69677
	* config/i386/i386.c (convert_scalars_to_vector): Readd stack
	alignment fixes.
	(ix86_option_override_internal): Disable TARGET_STV even for
	-m{incoming,preferred}-stack-boundary=3.

From-SVN: r233167